# watch-rs

./: .gitignore  Cargo.toml  build.bash
src/: lib.rs
src/models/: watcher.rs
src/utils/: mod.rs
